<resources>
    <string name="app_name">vacunasUY</string>
    <string name="alert_btn_positive">Si</string>
    <string name="alert_btn_negative">No</string>
    <string name="alert_btn_neutral">OK</string>

    <!-- VIEWS-->
    <string name="title_agenda">Planes Agenda</string>
    <string name="title_notifiacion">Notificaciones</string>
    <string name="title_vacunatorio">Vacunatorios</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_certificado">Certificado</string>
    <string name="title_miagenda">Mi Agenda</string>
    <string name="title_detalleplan">Plan</string>
    <string name="title_agendarse">Agendar</string>
    <string name="title_seleccionar">Sel.</string>
    <string name="title_departamento">departamento</string>
    <string name="title_localidad">localidad</string>

    <!-- ACCESS-->
    <string name="access_title_err">Error de Permisos</string>
    <string name="access_msg_err">¿Desea Asignar los permisos?</string>
    <string name="text_load">Cargando…</string>
    <string name="text_load_btn">Reintentar</string>
    <string name="text_load_btn_main">Ir a Activiad Principal</string>


    <!--VIEW LOGIN-->
    <string name="usr_usr">Usuario:</string>
    <string name="usr_correo">Correo eletrónico:</string>
    <string name="usr_documento">Cédula:</string>
    <string name="usr_documento_ej">Ej: 12345678</string>
    <string name="usr_pas">Contraseña:</string>
    <string name="usr_btn_ing">Ingresar</string>

    <!-- MENU-->
    <string name="menu_bt_home">Inicio</string>
    <string name="menu_bt_info">Información</string>
    <string name="menu_bt_cert">Certificados</string>
    <string name="menu_bt_vacun">Vacunatorios</string>
    <string name="menu_bt_user">Mi Estado</string>
    <string name="menu_bt_agenda">Agenda</string>
    <string name="menu_bt_notificacion">Notificaciones</string>
    <string name="menu_LoginNotificacion">Para ver las notificaciones debe estar logueado</string>

    <!--VIEW INFO -->
    <string name="info_title">Información</string>
    <string name="info_txt_enfermedad">Enfermedades</string>
    <string name="info_txt_vacuna">Vacunas</string>
    <string name="info_txt_plan">Planes</string>
    <string name="info_txt_agenda">Agendas Abiertas</string>
    <string name="info_txt_agenda_prox">Próximas Agendas</string>
    <string name="info_txt_vacunatorio">Vacunatorios</string>

    <!--VIEW MAP-->
    <string name="map_text_srch">Filtrar</string>
    <string name="map_text_distancia_title">Ingreso de distancia (Km)</string>
    <string name="map_text_btn">Buscar</string>
    <string name="map_text_loc">Ubicación Actual</string>
    <string name="map_copyright">&#169; OpenStreetMap | VacunasUY</string>
    <string name="map_text_loc_err">Activar ubicación</string>
    <string name="map_text_loc_err_msg">Su ubicación esta desactivada.\nPor favor active su ubicación</string>

    <string-array name="mapopciones">
        <item></item>
        <item>Departamento</item>
        <item>Localidad</item>
        <item>Distancia</item>
        <item>Todos</item>
    </string-array>

    <!--VIEW USER INFO-->
    <string name="user_info_titulo">Perfil</string>
    <string name="user_info_subtitulo">Información de la cuenta</string>
    <string name="user_infoText_name">Nombre</string>
    <string name="user_infoText_apellido">Apellido</string>
    <string name="user_infoText_documento">Documento</string>
    <string name="user_infoText_correo">Correo electrónico</string>
    <string name="user_infoText_fnacimiento">Fecha nacimiento</string>
    <string name="user_infoText_sectorlaboral">Sector Laboral</string>

    <!--CONNECTION MESSAGES-->
    <string name="err_conectividad">Error de conectiviad. No existe conexión de red disponible.</string>
    <string name="err_recuperarpag">Error de conectiviad. No se puede conectar con el servicio.</string>
    <string name="registros_err">Error del tipo de dato retornado</string>
    <string name="title_activity_vacunatorio_maps">Map</string>

    <!--ADD FECHA NACIMIENTO-->
    <string name="addFecha_subtitulo2">Ingrese Fecha Nacimiento</string>
    <string name="addFecha_subtitulo3">Ingrese Sector Laboral</string>
    <string name="addFecha_button">Actualizar</string>

    <!--PLAN-->
    <string name="plan_group_title"> Plan - </string>
    <string name="plan_title"> Plan de Vacunación</string>
    <string name="plan_mensaje">¿Qué desea hacer?</string>
    <string name="plan_mensaje_nologin">Para Agendarse debe estar logueado</string>
    <string name="plan_group_vigente">Vigente</string>
    <string name="plan_group_vencido">Vencido</string>
    <string name="plan_group_proximo">Próximo</string>
    <string name="plan_periodo">Período</string>
    <string name="plan_detealle">Ver Detalle</string>
    <string name="plan_agendar">Agendar</string>
    <string name="plan_ingresar">Ingresar</string>
    <string name="plan_detalle_edadmin">Edad mínima</string>
    <string name="plan_detalle_edadmax">Edad máxima</string>
    <string name="plan_detalle_fechaini">Fecha de inicio</string>
    <string name="plan_detalle_fechafin">Fecha de fin</string>
    <string name="plan_detalle_sectores">Sectores cubiertos</string>
    <string name="plan_detalle_vacuna">Vacuna</string>
    <string name="plan_detalle_vacuna_nombre">Nombre</string>
    <string name="plan_detalle_vacuna_dosis">Cantidad de dósis</string>
    <string name="plan_detalle_vacuna_periodo">Período</string>
    <string name="plan_detalle_vacuna_inmunidad">Inmunidad</string>
    <string name="plan_detalle_vacuna_enfermedad">Afección</string>

    <!-- AGENDA -->
    <string name="agenda_hint_date">yyyy-mm-dd</string>
    <string name="agenda_puestoText">Puesto -</string>
    <string name="agenda_sindisponibilidad">Sin Disponibilidad</string>
    <string name="agenda_errorVacunatorios">No existen vacunatorios para el Plan Seleccionado</string>
    <string name="agenda_DatePickeTitle">Seleccione Fecha Tentativa</string>
    <string name="agenda_ErrorPuesto">Debe seleccionar un puesto de Vacunación</string>
    <string name="agenda_ErrorFecha">Debe seleccionar una fecha tentativa</string>
    <string name="agenda_AlertTitle">Confirmar datos</string>
    <string name="agenda_AlertVacunatoio">Vacunatorio</string>
    <string name="agenda_AlertPuesto">Puesto</string>
    <string name="agenda_AlertFecha">Fecha</string>
    <string name="agenda_Certificado">Certificado</string>
    <string name="agenda_VerMiAgenda">Mi Agenda</string>
    <string name="titleEnfermedadUsuario">Enfermedades cubiertas</string>
    <string name="agenda_ok">Agendado con éxito</string>


    <!-- NOTIFICACIONES -->
    <string name="notificacion_title">Notificaciones</string>
    <string name="notificacion_fecha">Fecha</string>
    <string name="notificacion_texto">Mensaje</string>
    <string name="notificacion_eliminar">Eliminar</string>
    <string name="successsful_deletion">Borrado Correcto</string>
    <string name="deletion_failed">No fue posible el Borrado</string>
    <string name="visualizacion_failed">No fue posible la visualización</string>
    <string name="notificacion_tId">Id</string>
    <string name="notificacion_tNombre">Nombre</string>
    <string name="notificacion_tTexto">Mensaje</string>
    <string name="notificacion_tFecha">Fecha</string>
    <string name="notificacion_tEliminar">Eliminar</string>
    <string name="notificacion_tVer">Ver</string>

    <!-- CERTIFICADO -->
    <string name="certificado_Title">Certificado Digital</string>
    <string name="certificado_tNombre">Nombre</string>
    <string name="certificado_tDocumento">Documento</string>
    <string name="certificado_tDosis">Dosis</string>
    <string name="certificado_tFecha">Fecha</string>
    <string name="certificado_tVacuna">Vacuna</string>
    <string name="certificado_qr">Inmformación</string>
</resources>