<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccessActivity">

    <RelativeLayout
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitCenter"
                android:layout_marginTop="50dp"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_load"
                    android:textSize="20sp"
                    android:id="@+id/textViewpb"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>

        <Button
            android:id="@+id/b_gotoMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/b_reload"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/text_load_btn_main" />
        <Button
            android:id="@+id/b_reload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_design"
            android:text="@string/text_load_btn" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>