<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitCenter"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/usr_documento"
                android:id="@+id/log_textView_usr"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_editText_documento"
                android:layout_marginTop="5dp"
                android:autofillHints="@string/usr_documento"
                android:hint="@string/usr_documento_ej"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usr_correo"
                android:id="@+id/log_textView_correo"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_editText_correo"
                android:layout_marginTop="5dp"
                android:labelFor="@id/log_editText_correo"
                android:autofillHints="@string/usr_correo"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usr_pas"
                android:id="@+id/log_textView_pass"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_editText_pwd"
                android:layout_marginTop="5dp"
                android:labelFor="@id/log_editText_pwd"
                android:autofillHints="@string/usr_pas"
                android:inputType="textPassword"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_design"
                android:text="@string/usr_btn_ing"
                android:id="@+id/log_button_ing" />
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/menu_bar_bg"
            app:itemIconTint="@color/menu_bar_text"
            app:itemTextColor="@color/menu_bar_text"
            app:menu="@menu/bottom_navigation_menu">
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>